--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,7 +1,9 @@
-body {
-    font-family: "Noto Sans JP";
+.md-typeset
+{
+    font-family: "Noto Sans Japanese", "Segoe UI", "Helvetica Neue", Arial, "Yu Gothic Medium", "游ゴシック Medium", "Yu Gothic", YuGothic, YuGothicM, "Hiragino Kaku Gothic ProN", メイリオ, Meiryo, sans-serif;
+    font-size: 0.7rem;
 }
 
-
-
-
+.md-grid {
+    max-width: 1600px; 
+}
